--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,18 +1,21 @@
-name: Docker Image CI
+name: publish
 
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+on: [push]
 
 jobs:
-
-  build:
-
+  publish-image:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+
+    - name: Login to Docker Container Registry
+      uses: docker/login-action@v1
+      with:
+        username: jeremyk6
+        password: ${{ secrets.PKG_SECRET }}
+
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag le-carrefour-nelson:$(date +%s)
+      run: |
+        docker build . --tag jeremyk6/le-carrefour-nelson:latest
+        docker push jeremyk6/le-carrefour-nelson:latest
