--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,19 +3,29 @@ name: publish
 on: [push]
 
 jobs:
-  publish-image:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
-
-    - name: Login to Docker Container Registry
-      uses: docker/login-action@v1
-      with:
-        username: jeremyk6
-        password: ${{ secrets.PKG_SECRET }}
-
-    - name: Build the Docker image
-      run: |
-        docker build . --tag jeremyk6/le-carrefour-nelson:latest
-        docker push jeremyk6/le-carrefour-nelson:latest
+      -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
+        name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: jeremyk6
+          password: ${{ secrets.PKG_SECRET }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: jeremyk6/le-carrefour-nelson:latest
