--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,4 +28,4 @@ jobs:
           context: .
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: jeremyk6/le-carrefour-nelson:latest
+          tags: jeremyk6/le-carrefour-nelson:openlayers
